--- a/MiniProjetGL4_Insurance/notebooks/modeling.ipynb
+++ b/MiniProjetGL4_Insurance/notebooks/modeling.ipynb
@@ -2,7 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Younes-Abbes/Machine-Learning-project-EDA---Life-Insurance-Subscription-Prediction/blob/main/MiniProjetGL4_Insurance/notebooks/modeling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tf22jbIDgj-Z"
+      },
       "source": [
         "# Modeling - Life Insurance Subscription Prediction\n",
         "\n",
@@ -11,12 +23,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
+      "execution_count": 1,
+      "metadata": {
+        "id": "nvbhxKBjgj-a",
+        "outputId": "c970a7fe-f8fc-4c6b-a037-9f6cc627d2d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Libraries loaded!\n"
           ]
@@ -44,15 +62,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "AQbacI80gj-c"
+      },
       "source": [
         "## 1. Data Loading"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "EscWpF_ogj-c",
+        "outputId": "304c3505-6fe7-4212-d30f-5e6d3ea76d66"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -212,15 +235,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "XPRxUUhUgj-d"
+      },
       "source": [
         "## 2. Preprocessing"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "9O1IBq9ngj-d",
+        "outputId": "177a0241-605e-4899-bc2e-ebbefcf76bc1"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -241,8 +269,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "5zt3sS-ngj-e",
+        "outputId": "fe165ffe-25db-4822-921d-b7f4ec0068f4"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -262,8 +293,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "sfXLndyBgj-e",
+        "outputId": "504db6a3-03aa-409e-e3fc-4c2132c6d8c2"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -282,8 +316,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "rsj7evhPgj-e",
+        "outputId": "06b46539-7b71-48a6-891b-6a4a405d48d7"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -303,8 +340,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "RDWy9n-Lgj-f",
+        "outputId": "82ca6d4c-381c-4561-b064-2110cfd6abd1"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -322,7 +362,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "RkPmDGR_gj-f"
+      },
       "source": [
         "## 3. Define Models"
       ]
@@ -330,7 +372,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "eK3G4znmgj-f",
+        "outputId": "2c209e4b-cbab-4f9b-828f-6736b5fee9e2"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -353,15 +398,20 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "cLesJd4Sgj-f"
+      },
       "source": [
         "## 4. Cross-Validation"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "2-k1ttL3gj-f",
+        "outputId": "cc354a49-bdc3-4ca9-bd9a-6d419c75becf"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -423,7 +473,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "WvrZQOH9gj-g"
+      },
       "outputs": [],
       "source": [
         "results_df = pd.DataFrame(results).sort_values('CV ROC-AUC', ascending=False)\n",
@@ -433,7 +485,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "KUO8xRVMgj-g"
+      },
       "outputs": [],
       "source": [
         "fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
@@ -448,7 +502,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Blm_N_FYgj-g"
+      },
       "source": [
         "## 5. Train Models"
       ]
@@ -456,7 +512,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "_D3AXKG8gj-g"
+      },
       "outputs": [],
       "source": [
         "trained = {}\n",
@@ -469,7 +527,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "EqzzGL-Ngj-g"
+      },
       "source": [
         "## 6. Test Evaluation"
       ]
@@ -477,7 +537,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "MlLTF4zOgj-g"
+      },
       "outputs": [],
       "source": [
         "test_res = {'Model': [], 'Test Acc': [], 'Test F1': [], 'Test AUC': []}\n",
@@ -494,7 +556,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "aWvYzNg5gj-h"
+      },
       "source": [
         "## 7. ROC Curves"
       ]
@@ -502,7 +566,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Tdw-JfBkgj-h"
+      },
       "outputs": [],
       "source": [
         "plt.figure(figsize=(10, 8))\n",
@@ -523,7 +589,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "lbO5U4pGgj-h"
+      },
       "source": [
         "## 8. Confusion Matrices"
       ]
@@ -531,7 +599,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "wMBn1I--gj-h"
+      },
       "outputs": [],
       "source": [
         "fig, axes = plt.subplots(2, 3, figsize=(15, 10))\n",
@@ -549,7 +619,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "z6cVB3LIgj-h"
+      },
       "source": [
         "## 9. GridSearchCV (Top 2)"
       ]
@@ -557,7 +629,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "hvdqhnRKgj-h"
+      },
       "outputs": [],
       "source": [
         "top2 = results_df.head(2)['Model'].tolist()\n",
@@ -580,7 +654,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "zt_NkXP_gj-h"
+      },
       "outputs": [],
       "source": [
         "best_models = {}\n",
@@ -604,7 +680,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "iVlzXGBegj-h"
+      },
       "source": [
         "## 10. Feature Importance"
       ]
@@ -612,7 +690,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "1gy0uIftgj-h"
+      },
       "outputs": [],
       "source": [
         "feat_names = X.columns.tolist()\n",
@@ -630,7 +710,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "a7scfvdugj-i"
+      },
       "source": [
         "## 11. Classification Report"
       ]
@@ -638,7 +720,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "MaQNvLsigj-i"
+      },
       "outputs": [],
       "source": [
         "best_name = test_df.iloc[0]['Model']\n",
@@ -650,7 +734,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "pfQkGOgDgj-i"
+      },
       "source": [
         "## 12. Save Models"
       ]
@@ -658,7 +744,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "CQqwpzyZgj-i"
+      },
       "outputs": [],
       "source": [
         "joblib.dump(best, '../models/best_model.pkl')\n",
@@ -671,7 +759,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Yh1GcxHHgj-i"
+      },
       "source": [
         "## 13. Summary"
       ]
@@ -679,7 +769,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Ol3sZDeugj-i"
+      },
       "outputs": [],
       "source": [
         "print('='*50)\n",
@@ -713,8 +805,12 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.14.2"
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 4
+  "nbformat_minor": 0
 }
